--- a/style.css
+++ b/style.css
@@ -123,18 +123,31 @@ section{
    bottom: -2rem;
    left: -2rem;
    right: -2rem;
+   z-index: -10;
+   cursor:not-allowed;
    /* width: 4rem;
    height: 4rem; */
    background-color: var(--secondary);
 }
 
+.mt{
+   margin-top: 3rem;
+}
+.mb{
+   margin-bottom: 2rem;
+}
+
+
 .hero{
-   padding: 8rem 2rem 0rem 2rem;
+   padding: 0rem 2rem 0rem 2rem;
+   /* margin-top: 7rem; */
+   margin-bottom: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
-   gap: 4rem
+   gap: 4rem;
+   height: 100vh;
 }
 .hero__content{
    display: flex;
@@ -144,9 +157,13 @@ section{
    gap: 3rem;
 }
 
-
+.hero__image{
+   display: none;
+}
 .profile_photo{
-   max-width: 30rem;
+   max-width: 25rem;
+   display: block;
+   margin-inline: auto;
 }
 
 .hero__content_buttons{
@@ -161,26 +178,27 @@ hr{
    background-color: var(--secondary);
    border: none;
    border-radius: 2rem;
-   margin: 0rem auto 8rem auto;
+   margin: 0rem auto 3rem auto;
 }
 
 
 .skills__content{
    margin-top: 3rem;
    display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(40rem, 2fr));
-   gap: 3rem
+  grid-template-columns: 1fr 1fr;
+  gap: 4rem;
 }
 
 .skills__content p{
-   font-size: 2rem;
+   font-size: 2.1rem;
+
 }
 
 
 .card__container{
    margin-top: 3rem;
    display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
    place-items: center;
    gap: 5rem;
    
@@ -216,10 +234,11 @@ hr{
 
 .about{
    background-color: var(--secondary);
+   padding-top: 2rem;
 }
 .about__title{
    /* margin-top: 2rem; */
-   margin-bottom: 4rem;
+   /* margin-bottom: 4rem; */
 }
 .about__text{
    
@@ -375,7 +394,9 @@ footer{
    text-align: center;
    padding: 5rem 0;
 }
-
+.footer_icons a{
+   text-decoration: none;
+}
 .footer_icons img{
    width: 2.5rem;
    margin-left: 2rem;
@@ -400,6 +421,12 @@ footer{
 
       height: 5rem;
    }
+
+   section{
+      width: 80%;
+      margin-inline: auto;
+      padding-inline: 0;
+   }
    
    .hero{
       padding: 0;
@@ -408,6 +435,8 @@ footer{
       width: 80%;
       margin: 0 auto;
       height: 100vh;
+
+      
    }
 
    .hero__content{
@@ -433,7 +462,24 @@ footer{
       font-weight: 300;
    }
    
+   .hero__image{
+      display: block;
+   }
    .profile_photo{
       max-width: 50rem;
+   }
+
+   .contact__body{
+      display: flex;
+      gap: 2rem;
+   }
+   .to_be_flex{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+   }
+   .contact__body input{
+      padding: 2rem;
+      /* margin-bottom: 3rem; */
    }
 }
